--- a/V2/css/style.css
+++ b/V2/css/style.css
@@ -8,8 +8,12 @@ body
     margin: 0px, 0px, 0px, 0px;
     font-family: 'Raleway', sans-serif;
     color: black;
+    line-height: 1em;
 }
-                                    /*flex*/
+.flex
+{
+    display: flex;
+}                                   /*flex*/
 .flexAround{
     display: flex;
     justify-content: space-around;
@@ -22,9 +26,16 @@ body
     display: flex;
     justify-content: space-between;
 }
+.flexStart{
+    display: flex;
+    justify-content: flex-start;
+}
 .alignCenter
 {
     align-items: center;
+}
+.alignStart{
+    align-items: flex-start;
 }
 .row
 {
@@ -57,7 +68,7 @@ body
 }
 .solidBorder
 {
-    border: 2px, solid, #d9d9d9; 
+    border: 1px solid black;
 }
 .padding
 {
@@ -66,6 +77,10 @@ body
 .margin
 {
     margin: 10px;
+}
+.variableMarginBottom
+{
+    margin-bottom: 25px;
 }
                             /*Color */
 .backgroundblue
@@ -104,24 +119,58 @@ header
     border-top: 1px solid #0065fc;
     color:#0065fc;
 }
-.BarreRecherche
+.sectionRecherche
+{
+    align-items: flex-start;
+}
 .sizeHebergements{
     flex: 2;
     height: 650px;
     margin-right: 20px;
-    padding: 40px;
+    padding: 20px;
 }
 .sizePopulaire{
     flex: 1;
     height: 650px;
     margin-left: 20px;
+    padding: 20px;
 }
-
-.imgHebergements1
+.carteHeb
 {
-    background-image: url("../images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg");
-    background-size: cover;
-    background-position: center;;
-    width: 100%;
-    height: 120px;
+    width: 246px;
+    height: 199px;
+    margin: 0px 5px 0px 5px;
+    padding: 3px 7px 3px 0px;
+}
+.imgHebergements
+{
+    height: 49%;
+    width: 98%;
+    margin: 2px;
+    padding: 2px 5px 2px 0px;
+}
+.photos{
+height: 124px;
+width: 242px;
+margin: 7px 2px 7px 7px;
+}
+.hebInfos
+{
+    height: 49%;
+    margin: 2px;
+    padding-top: 3%;
+}
+.hebTitre
+{
+    height: 31%;
+    padding: 2px;
+}
+.hebPrix
+{
+    height: 29%;
+}.hebEtoiles
+{
+ Height: 29%;}
+.headPopulaire{
+    
 }
