--- a/V2/css/style.css
+++ b/V2/css/style.css
@@ -149,7 +149,7 @@ header
     margin: 2px;
     padding: 2px 5px 2px 0px;
 }
-.photosHeb{
+.photos{
 height: 124px;
 width: 242px;
 margin: 7px 2px 7px 7px;
@@ -171,7 +171,6 @@ margin: 7px 2px 7px 7px;
 }.hebEtoiles
 {
  Height: 29%;}
-.imgPop
-{
+.headPopulaire{
     
 }
