--- a/V1/css/style.css
+++ b/V1/css/style.css
@@ -49,6 +49,10 @@ body
 {
     flex-direction: row;
 }
+.VariableColumn
+{
+    flex-direction: column;
+}
         /*Border */
 .roundedBorderTop
 {
@@ -171,6 +175,50 @@ margin: 7px 2px 7px 7px;
 }.hebEtoiles
 {
  Height: 29%;}
-.headPopulaire{
-    
+.contenuPop{
+    padding: 5px;
 }
+.cartePop {
+    width: 100%;
+    height: 29%;
+    padding-bottom: 5px;
+}
+.imgPop
+{
+    height: 98%;
+    width: 98%;
+    margin: 2px;
+    padding: 2px 5px 2px 5px;
+}
+.photosPop{
+height: 137px;
+width: 144px;
+margin: 7px 2px 7px 7px;
+}
+.popTitre{
+    height: 38px;
+}
+.popPrix{
+    height: 15px;
+    margin-bottom: 85px;
+}
+.activCarte
+{
+    width: 302px;
+    height: 444.5px;
+}
+.imgAct
+{
+    height: 98%;
+    width: 98%;
+
+}
+.photosAct{
+height: 389px;
+width: 302px;
+}
+footer{
+    margin-top: 3%;
+    padding-top: 20px;
+}
+
