--- a/V1/css/style-desktop.css
+++ b/V1/css/style-desktop.css
@@ -45,10 +45,12 @@ body
 {
     flex-direction: column;
 }
+
 .DirVariable
 {
     flex-direction: row;
 }
+
 .VariableColumn
 {
     flex-direction: column;
@@ -107,6 +109,7 @@ body
 header
 {
     height 45px;
+    width: 100%;
 }
 .logo{
     height: 19px;
