--- a/V1/css/style-tablette.css
+++ b/V1/css/style-tablette.css
@@ -96,7 +96,7 @@ body
 }
 .backgroundgrey
 {
-    background-color: #d9d9d9;
+    background-color: #F2F2F2;
 }
 .backgroundWhite
 {
@@ -114,21 +114,24 @@ header
 .logo{
     height: 19px;
     width: 61.09px;
+    padding-top: 44px;
+}
+nav{
+    width: 25%;
+    min-width: 280px;
 }
 .lien
 {
     text-decoration: none;
     color: black;
-    border-bottom: 0px solid black;
+    padding-top: 44px;
 }
 .lien:hover
 {
-    border-top: 1px solid #0065fc;
     color:#0065fc;
 }
-.sectionRecherche
-{
-    align-items: flex-start;
+.sectionRecherche{
+    height: 36px;
 }
 .sizeHebergements{
     flex: 2;
