--- a/V1/css/style-mobile.css
+++ b/V1/css/style-mobile.css
@@ -48,7 +48,7 @@ body
 
 .DirVariable
 {
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .VariableColumn
@@ -96,7 +96,7 @@ body
 }
 .backgroundgrey
 {
-    background-color: #d9d9d9;
+    background-color: #F2F2F2;
 }
 .backgroundWhite
 {
@@ -110,10 +110,18 @@ header
 {
     height 45px;
     width: 100%;
+    padding-top: 21px;
 }
 .logo{
     height: 19px;
     width: 61.09px;
+    margin-left: 48%;
+    margin-right: 48%;
+    margin-top: 44px;
+    margin-bottom: 46px;
+}
+nav{
+    width: 100%;
 }
 .lien
 {
@@ -123,12 +131,11 @@ header
 }
 .lien:hover
 {
-    border-top: 1px solid #0065fc;
+    border-bottom: 1px solid #0065fc;
     color:#0065fc;
 }
-.sectionRecherche
-{
-    align-items: flex-start;
+.sectionRecherche{
+    height: 36px;
 }
 .sizeHebergements{
     flex: 2;
