--- a/V1/css/style-tablette.css
+++ b/V1/css/style-tablette.css
@@ -106,6 +106,17 @@ body
 {
     color:#0065fc;
 }
+.styleText1{
+    font-size: 22px;
+    font-weight: bold;
+}
+.styleText2{
+    font-size: 16px;
+    font-weight: bold;
+}
+.styleText3{
+    font-size: 16px;
+}
 header
 {
     height 45px;
@@ -131,6 +142,9 @@ nav{
     color:#0065fc;
 }
 .sectionRecherche{
+    height: 36px;
+}
+.search{
     height: 36px;
 }
 .sizeHebergements{
