--- a/V1/css/style.css
+++ b/V1/css/style.css
@@ -14,6 +14,7 @@ body
 h1{
     font-weight: 700;
     font-size: 22px;
+    margin-bottom: 5px;
 }
 h2{
     font-weight: 700px;
@@ -35,10 +36,6 @@ input{
     font-size: 16px;
     color: black;
 
-}
-@media screen and (max-width: 495px){
-    body {padding-right: 0px;
-    padding-left: 0px;}
 }
 .flex
 {
@@ -78,12 +75,6 @@ input{
 .DirVariable {
     flex-direction: row;
 }
-
-@media screen and (max-width: 495px) {
-    .DirVariable {
-        flex-direction: column;
-    }
-}
 .sectionRecherche{
     height: 36px;
 }
@@ -94,19 +85,19 @@ input{
         /*Border */
 .roundedBorderTop
 {
-    border-radius : 10px 10px 0px 0px;
+    border-radius : 20px 20px 0px 0px;
 }
 .roundedBorderleft
 {
-    border-radius : 10px 0px 0px 10px;
+    border-radius : 20px 0px 0px 10px;
 }
 .roundedBorderRight
 {
-    border-radius : 0px 10px 10px 0px;
+    border-radius : 0px 20px 20px 0px;
 }
 .roundedBorderAll
 {
-    border-radius: 10px;
+    border-radius: 20px;
 }
 .solidBorder
 {
@@ -114,7 +105,7 @@ input{
 }
 .padding
 {
-    padding: 15px;
+    padding: 6px;
 }
 .margin
 {
@@ -151,33 +142,15 @@ header
     width: 100%;
     padding-bottom: 25px;
 }
-@media screen and (max-width: 495px) {
-    header {
-        height: 155px;
-    }
-}
 .logo{
         height: 19px;
         width: 61.09px;
     padding-top: 44px;}
-@media screen and (max-width: 495px)
-{
-    .logo {        margin-left: 48%;
-        margin-right: 48%;
-        margin-bottom: 46px;}
-}
 nav{
     width: 25%;
     min-width: 250px;
     display: flex;
     justify-content: space-between;
-}
-@media screen and (max-width: 495px)
-{
-    nav { width: 100%;
-        justify-content: flex-start;
-        min-width: none;
-    }
 }
 .lien
 {
@@ -186,30 +159,46 @@ nav{
     padding-top: 44px;
     font-size: 16px;
     font-weight: 400;
+    flex-grow: 1;
 }
 .lien:hover
 {
     border-top: 1px solid #0065fc;
     color:#0065fc;
 }
-@media screen and (max-width: 495px){
-    .lien:hover
-{   
-
-    border-top: 1px solid white;
-    border-bottom: 1px solid #0065fc;
-    color:#0065fc;
-  
-}}
 .sectionRecherche
 {
     align-items: flex-start;
 }
-@media screen and (max-width: 495px){
-    .sectionRecherche{ margin-bottom: 35px;}
+.search
+{
+    width: 100%;
+    max-width: 332px;
+    margin-bottom: 25px;
+    margin-top: 15px;
 }
-.search{
-    height: 36px;
+.sizeIcone
+{
+   height: 49px;
+   width: 49px;
+   border-radius: 15px 0px 0px 15px;
+}
+.input {
+height: 49px;
+width: 100%;
+border: 2px solid  #F2F2F2;
+padding-left: 5px;
+}
+.icon {
+    display: none;}
+.text {
+    display: inline-block;
+    width: 132px;
+    text-align: center;
+}
+.rechercher{
+    height: 49px;
+    border-radius: 0px 15px 15px 0px;
 }
 .sectionFiltre{
     display: flex;
@@ -217,53 +206,28 @@ nav{
     justify-content: baseline;
     align-items: flex-start;
 }
-@media screen and (max-width: 495px){
-    .sectionFiltre{ display: flex;
-    flex-direction: column; }}
+
 .contenantFiltres{
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 
 .boxFiltre
 {
-    padding: 1px 12px 1px 12px;
-    width: 226px;
+    padding: 1px 15px 1px 15px;
+    max-width : 226px;
     height: 50px;
-    margin-left: 3px;
-    margin-right: 3px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
     border: 3px solid #F2F2F2;
     border-radius: 25px;
     margin-bottom: 5px;
 }
-@media screen and (max-width: 495px){
-    .boxFiltre{width: 160px;}
-    .contenantFiltres{
-    
-        height: 140px;
-    width 100%;
-    position: relative;}
-    #economique {position: absolute;
-    top: 3px;
-    left : 3px;
-}
-    
-    #familial {position: absolute;
-        top: 67px;
-        left : 3px;
-}
-    
-    #romantique{
-        position: absolute;
-        top: 3px;
-        left: 197px;
-    }
-    
-    #animaux{
-        position: absolute;
-        top: 67px;
-        left: 197px;
-    }
+#animaux{
+    min-width: 226px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 .boxFiltre:hover{
     background-color: #deebff;
@@ -271,12 +235,6 @@ nav{
 section{
     display: flex;
     flex-direction: row;
-}
-@media screen and (max-width: 1024px){
-    section{ flex-direction: column;}
-}
-@media screen and (max-width: 495px){
-    section{ flex-direction: column-reverse;}
 }
 .sizeHebergements{
     display: flex;
@@ -294,27 +252,10 @@ section{
     padding: 20px;
     margin-bottom: 10px;
 }
-@media screen and (max-width: 495px){
-    .sizeHebergements{ background-color: white;
-    width: 100%;
-margin: 0px;}
-        .sizePopulaire{width: 100%;
-        margin: 0px;
-        padding: 0px;}
-}
-@media screen and (max-width: 1024px){
-    .sizeHebergements{width: 100%;
-    margin-right: 0px;
-}
-    .sizePopulaire{width: 100%;
-        margin-left: 0px;
-}}
-.contenuHeb{
-  
-}
 .carteHeb
 {
-    width: 246px;
+    max-width: 246px;
+    width: 29%;
     height: 199px;
     margin: 2px 5px 10px 5px;
     padding: 3px 7px 3px 0px;
@@ -329,7 +270,8 @@ margin: 0px;}
 }
 .photos{
 height: 124px;
-width: 242px;
+max-width: 242px;
+width: 100%;
 margin: 7px 2px 7px 7px;
 }
 .hebInfos
@@ -357,12 +299,6 @@ margin: 7px 2px 7px 7px;
 .contenuPop{
     padding: 5px;
     flex-direction: column;
-}
-@media screen and (max-width: 1024px){
-    .contenuPop{ flex-direction: row;}
-}
-@media screen and (max-width: 495px){
-    .contenuPop{ flex-direction: column;}
 }
 .cartePop {
     width: 100%;
@@ -407,23 +343,138 @@ margin: 7px 2px 7px 7px;
 height: 389px;
 width: 302px;
 }
-@media screen and (max-width: 1024px){
+footer{
+    margin-top: 3%;
+    padding-top: 20px;
+}
+@media screen and (max-width: 992px){
     .activCarte{ height: 267px;
     width: 182px;}
     .photosAct{
         width: 182px;
         height: 211px;}
-}
-@media screen and (max-width: 495px){
-    .activCarte{ height: 190px;
-    width: 334px;}
-    .photosAct{
-        width: 334px;
-        height: 134px;
+        .contenuPop{ flex-direction: row;}
+        .sizeHebergements{width: 100%;
+            margin-right: 0px;
+        }
+            .sizePopulaire{width: 100%;
+                margin-left: 0px;
+        }
+        section{ flex-direction: column;}
+        .boxFiltre{padding:0px 8px 0px 8px;
+            margin-left: 1.5%;
+    margin-right: 1.5%;}
+    #animaux{
+        min-width: 190px;
     }
 }
-footer{
-    margin-top: 3%;
-    padding-top: 20px;
-}
 
+
+
+@media screen and (max-width: 768px) {
+    h3{font-size: 11px;}
+    .DirVariable {
+        flex-direction: column;
+    }
+    body {padding-right: 0px;
+        padding-left: 0px;}
+    header {
+            height: 155px;
+        }
+        .logo {        margin-left: 48%;
+            margin-right: 48%;
+            margin-bottom: 46px;}
+        nav { width: 100%;
+            justify-content: space-around;
+            min-width: none;
+        }
+        .contenantLien{
+            width: 50%;
+            flex-grow: 1;
+        }
+        .lien{
+            padding-bottom: 10px;
+        }
+        .lien:hover
+        {   
+        
+            border-top: 1px solid white;
+            border-bottom: 1px solid #0065fc;
+            color:#0065fc;
+        }
+        .sectionRecherche{ margin-bottom: 35px;}
+
+        .boxFiltre{min-width: 160px;
+            width: 44%;
+        padding: 0;
+    }
+            
+.contenantFiltres{            
+    height: 140px;
+    width: 100%;
+    position: relative;
+    justify-content: center;}
+            
+    #economique {position: absolute;
+        top: 1%;
+        left : 1%;
+        }
+            
+    #familial
+        {position: absolute;
+        top: 52%;
+        left : 1%;
+        }
+            
+            #romantique{
+                position: absolute;
+                top: 1%;
+                left: 53%;
+            }
+            
+            #animaux{
+                position: absolute;
+                top: 52%;
+                left: 53%;
+                min-width: 160px;
+            }
+            .sectionFiltre{ display: flex;
+                flex-direction: column; }
+                .text {
+                    display: none;
+                  }
+                
+                  .icon {
+                    display: flex;
+                  }
+.sizeHebergements{ background-color: white;
+            width: 100%;
+        margin: 0px;}
+.carteHeb
+{
+    max-width: 246px;
+    width: 85%;
+    height: 199px;
+    margin: 2px 5px 10px 5px;
+    padding: 3px 7px 3px 0px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.imgHebergements
+{
+    height: 49%;
+    width: 98%;
+    margin: 2px;
+    padding: 2px 5px 2px 0px;
+}
+        .activCarte{ height: 190px;
+            width: 334px;}
+        .photosAct{
+                width: 334px;
+                height: 134px;
+            }
+        .contenuPop{ flex-direction: column;}
+        
+        .sizePopulaire{width: 100%;
+                        margin: 0px;}
+        section{ flex-direction: column-reverse;}
+        }
