--- a/V1/css/style.css
+++ b/V1/css/style.css
@@ -19,17 +19,32 @@ h1{
 h2{
     font-weight: 700px;
     font-size: 22px;
-    margin-bottom: 25px;
+    margin-bottom: 45px;
 }
 h3{
     font-weight: 700px;
     font-size: 16px;
-    padding-top: 6px;
-
+    margin: 0px;
+    padding: 0px;
+    line-height: 1em;
+}
+h4{
+    {
+        font-weight: 700px;
+        font-size: 16px;
+        margin-bottom: 35px;
+        padding: 0px;
+        line-height: 1em;
+    }
+}
+h6{
+    line-height: 1.7em;
 }
 p{
     font-weight: 400;
-    font-size: 16px;
+    margin: 0px;
+    padding: 0px;
+    line-height: 1em;
 }
 input{
     font-weight: 700;
@@ -235,6 +250,18 @@ padding-left: 5px;
 section{
     display: flex;
     flex-direction: row;
+    margin-bottom: 40px;
+}
+.enTeteHeb{
+    margin-left: 30px;
+    height: 71px;
+}
+.enTetePop{
+    margin-right: 15px;
+    margin-left: 20px;
+    padding-right: 5%;
+    padding-left: 5%;
+    height: 71px;
 }
 .sizeHebergements{
     display: flex;
@@ -253,42 +280,38 @@ section{
     margin-bottom: 10px;
 }
 .carteHeb
-{
-    max-width: 246px;
+{   max-width: 246px;
+    min-width: 217px;
     width: 29%;
     height: 199px;
-    margin: 2px 5px 10px 5px;
-    padding: 3px 7px 3px 0px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    margin-bottom: 30px;
 }
 .imgHebergements
 {
-    height: 49%;
-    width: 98%;
-    margin: 2px;
-    padding: 2px 5px 2px 0px;
+    margin-top: 5px;
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .photos{
 height: 124px;
 max-width: 242px;
 width: 100%;
-margin: 7px 2px 7px 7px;
+object-fit: fill;
 }
 .hebInfos
-{
-    height: 49%;
+{  
+    height: 37%;
     margin: 2px;
-    padding-top: 3%;
+    margin-top: 10px;
+    padding-left: 7px;
 }
 .hebTitre
 {
-    height: 31%;
     padding: 2px;
 }
-.hebPrix
-{
-    height: 29%;
-}
+
 .fa-star
 {
     padding-top: 4px;
@@ -302,34 +325,49 @@ margin: 7px 2px 7px 7px;
 }
 .cartePop {
     width: 100%;
-    height: 29%;
-    padding-bottom: 5px;
+    max-width: 343px;
+    min-width: 256px;
+    height: 137px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     margin-right: 2px;
     margin-left: 2px;
+    margin-bottom: 23px;
+    padding: 5px;
 }
 .imgPop
 {
-    height: 98%;
-    width: 98%;
-    margin: 2px;
-    padding: 2px 5px 2px 5px;
+    height: 100%;
 }
 .photosPop{
-height: 137px;
+height: 136px;
 width: 144px;
-margin: 7px 2px 7px 7px;
+object-fit: fill;
+border-radius: 20px 0px 0px 20px;
+}
+.popInfos{
+    margin-left: 15px;
+    margin-right: 25px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 .popTitre{
-    height: 38px;
+    margin: 0;
+    padding: 0;
+    line-height: 1em;
 }
 .popPrix{
-    height: 15px;
-    margin-bottom: 85px;
+    margin-top: 0px;
+    padding-top: 0px;
+    line-height: 1em;
+    font-size: 14px;
 }
+.divAct{
+    width: 100%;
+}
+
 .activCarte
-{
-    width: 302px;
+{   min-width: 302px;
+    width: 21%;
     height: 444.5px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -340,12 +378,16 @@ margin: 7px 2px 7px 7px;
 
 }
 .photosAct{
+
 height: 389px;
 width: 302px;
 }
 footer{
     margin-top: 3%;
     padding-top: 20px;
+}
+.Pfoot{
+    line-height: 1.9em;
 }
 @media screen and (max-width: 992px){
     .activCarte{ height: 267px;
@@ -455,16 +497,19 @@ footer{
     max-width: 246px;
     width: 85%;
     height: 199px;
-    margin: 2px 5px 10px 5px;
-    padding: 3px 7px 3px 0px;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .imgHebergements
 {
-    height: 49%;
-    width: 98%;
-    margin: 2px;
-    padding: 2px 5px 2px 0px;
+    height: 48%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+.photos{
+height: 124px;
+max-width: 242px;
+width: 100%;
 }
         .activCarte{ height: 190px;
             width: 334px;}
